<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
	<groupId>no.nav.spvedtak.felles</groupId>
	<artifactId>felles-root</artifactId>
	<version>${revision}${sha1}${changelist}</version>
	<packaging>pom</packaging>
	<name>Felles</name>

	<modules>
		<module>felles</module>
		<module>behandlingsprosess</module>
		<module>integrasjon</module>
	</modules>

	<properties>
		<revision>0.0.1</revision>
		<sha1></sha1>
		<changelist>-SNAPSHOT</changelist>
		<java.version>10</java.version>

		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

		<!-- Marker Junit Category interface for End2End tester -->
		<additionalparam>-Xdoclint:none</additionalparam> <!-- TODO: Skru på doclint igjen... -->

	</properties>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>flatten-maven-plugin</artifactId>
					<version>1.0.0</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-clean-plugin</artifactId>
					<version>3.0.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.0</version>
					<configuration>
						<source>${java.version}</source>
						<target>${java.version}</target>
						<encoding>UTF-8</encoding>
						<release>${java.version}</release>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>3.0.1</version>
					<executions>
						<execution>
							<id>attach-sources</id>
							<goals>
								<goal>jar</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>2.8.2</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-install-plugin</artifactId>
					<version>2.5.2</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.1.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.22.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-failsafe-plugin</artifactId>
					<version>2.22.0</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>exec-maven-plugin</artifactId>
					<version>1.6.0</version>
				</plugin>
				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>0.8.2</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>3.1.0</version>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>flatten-maven-plugin</artifactId>
				<configuration>
					<flattenMode>bom</flattenMode>
					<flattenedPomFilename>.flattened</flattenedPomFilename>
				</configuration>
				<executions>
					<execution>
						<id>flatten</id>
						<phase>process-resources</phase>
						<goals>
							<goal>flatten</goal>
						</goals>
					</execution>
					<execution>
						<id>flatten.clean</id>
						<phase>clean</phase>
						<goals>
							<goal>clean</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<executions>
					<execution>
						<id>failsafe-integration-test</id>
						<goals>
							<goal>integration-test</goal>
						</goals>
					</execution>
					<execution>
						<id>failsafe-verify</id>
						<goals>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<reuseForks>true</reuseForks>
					<useFile>true</useFile>
					<argLine>-Xms384M -Dfile.encoding=UTF-8 -Dlog.level.no.nav=WARN</argLine>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.jboss.jandex</groupId>
				<artifactId>jandex-maven-plugin</artifactId>
				<version>1.0.5</version>
				<executions>
					<execution>
						<id>make-index</id>
						<goals>
							<goal>jandex</goal>
						</goals>
						<configuration>
							<!-- Nothing needed here for simple cases -->
						</configuration>
					</execution>
				</executions>
			</plugin>

		</plugins>

	</build>

	<profiles>
		<profile>
			<id>runSonar</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<properties>
				<!-- maven.root bør overstyres fra cmdline -->
				<maven.root>${project.basedir}</maven.root>

				<sonar.language />
				<sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
				<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
				<sonar.sourceEncoding>UTF-8</sonar.sourceEncoding>
				<sonar.java.source>1.8</sonar.java.source>
				<sonar.exclusions>**/test/**,**/testutilities/**,**/fitnesse/**</sonar.exclusions>
				<sonar.coverage.exclusions>${sonar.exclusions}</sonar.coverage.exclusions>
				<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
				<sonar.jacoco.itReportPath>${maven.root}/target/jacoco-it.exec</sonar.jacoco.itReportPath>
				<sonar.jacoco.reportPath>${maven.root}/target/jacoco.exec</sonar.jacoco.reportPath>
				<sonar.javascript.lcov.reportPath>${maven.root}/web/klient/coverage/lcov.info
				</sonar.javascript.lcov.reportPath>
				<sonar.javascript.file.suffixes>.js,.jsx</sonar.javascript.file.suffixes>
			</properties>
			<build>
				<plugins>
					<plugin>
						<groupId>org.jacoco</groupId>
						<artifactId>jacoco-maven-plugin</artifactId>
						<executions>
							<execution>
								<id>agent</id>
								<goals>
									<goal>prepare-agent</goal>
								</goals>
								<configuration>
									<propertyName>jacoco.agent.argLine</propertyName>
									<destFile>${sonar.jacoco.reportPath}</destFile>
									<append>true</append>
									<excludes>${sonar.coverage.exclusions}</excludes>
								</configuration>
							</execution>
							<execution>
								<id>agent-it</id>
								<goals>
									<goal>prepare-agent-integration</goal>
								</goals>
								<configuration>
									<propertyName>jacoco.agent.itArgLine</propertyName>
									<destFile>${sonar.jacoco.itReportPath}</destFile>
									<append>true</append>
									<excludes>${sonar.coverage.exclusions}</excludes>
								</configuration>
							</execution>
						</executions>
					</plugin>

					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<configuration>
							<argLine>${jacoco.agent.argLine} -Xms384M -Dfile.encoding=UTF-8
								-Dlog.level.no.nav=WARN</argLine>
						</configuration>
					</plugin>

					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-failsafe-plugin</artifactId>
						<executions>
							<execution>
								<id>failsafe-integration-test</id>
								<goals>
									<goal>integration-test</goal>
								</goals>
							</execution>
							<execution>
								<id>failsafe-verify</id>
								<goals>
									<goal>verify</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<reuseForks>true</reuseForks>
							<useFile>true</useFile>
							<argLine>${jacoco.agent.itArgLine} -Xms384M -Dfile.encoding=UTF-8
							</argLine>
						</configuration>
					</plugin>

				</plugins>
			</build>
		</profile>
	</profiles>
	<distributionManagement>
		<repository>
			<id>m2internal</id>
			<name>NAV Maven2 Internal Repository</name>
			<url>http://repo.adeo.no/nexus/content/repositories/m2internal</url>
		</repository>
		<snapshotRepository>
			<id>m2snapshot</id>
			<name>NAV Maven2 Snapshot Repository</name>
			<url>http://repo.adeo.no/nexus/content/repositories/m2snapshot</url>
			<uniqueVersion>false</uniqueVersion>
		</snapshotRepository>
	</distributionManagement>
</project>

